[gd_scene load_steps=6 format=3 uid="uid://ctcbombakiofv"]

[ext_resource type="Script" uid="uid://b7bb3ctss7khy" path="res://ui/views/debug_intersections_view/default-view/default_view.gd" id="1_w7svy"]
[ext_resource type="Texture2D" uid="uid://b2ucwghxcyr4r" path="res://assets/ui_icons/debugger.png" id="2_753k0"]

[sub_resource type="LabelSettings" id="LabelSettings_1ejuk"]
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_3x06g"]
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_05d4u"]
font_size = 9

[node name="DefaultView" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_w7svy")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 2
vertical = true

[node name="HeaderContainer" type="BoxContainer" parent="BoxContainer"]
layout_mode = 2

[node name="HeaderTitle" type="Label" parent="BoxContainer/HeaderContainer"]
layout_mode = 2
text = "Default"
label_settings = SubResource("LabelSettings_1ejuk")

[node name="IdLabel" type="Label" parent="BoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "#1"
label_settings = SubResource("LabelSettings_3x06g")

[node name="DebugButton" type="Button" parent="BoxContainer/HeaderContainer"]
layout_mode = 2
icon = ExtResource("2_753k0")
flat = true

[node name="ScrollContainer" type="ScrollContainer" parent="BoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="BoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 3

[node name="Content" type="BoxContainer" parent="BoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4
vertical = true

[node name="StoppersList" type="BoxContainer" parent="BoxContainer/ScrollContainer/MarginContainer/Content"]
layout_mode = 2
size_flags_vertical = 3
vertical = true

[node name="Label" type="Label" parent="BoxContainer/ScrollContainer/MarginContainer/Content/StoppersList"]
layout_mode = 2
text = "Stoppers"
label_settings = SubResource("LabelSettings_05d4u")

[node name="BoxContainer" type="BoxContainer" parent="BoxContainer/ScrollContainer/MarginContainer/Content/StoppersList"]
layout_mode = 2
size_flags_vertical = 3
vertical = true
